--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit==1.23.1
-pandas==2.0.2
-joblib==1.2.0
-Pillow==9.5.0
-scikit-learn==1.2.2
-scipy==1.10.1
-threadpoolctl==3.1.0
+streamlit
+pandas
+joblib
+Pillow
+scikit-learn==0.23.2
+scipy
+threadpoolctl
